--- a/Quarter Project.html
+++ b/Quarter Project.html
@@ -8,12 +8,15 @@
 //Calculator Functions//
 ////////////////////////
 
+//Working
 //Calories
 function Calories(){
 var first = Number(document.theForm.elements[0].value);
 var second = Number(document.theForm.elements[1].value);
-var sum = first + second;
-document.getElementById("answer").innerHTML = sum;
+var AlcCal = 1881.22 * second * ((first - second) / (1.775 - first));
+var CarbCal = (3550 * second * ((.1808 * first) + (.8192 * second) - 1.0004));
+var TotalCal = Math.ceil(AlcCal + CarbCal);
+document.getElementById("answer").innerHTML = "Based on your gravity readings, your beer has about <b>" + TotalCal + " calories</b> per 12 ounce bottle";
 }
 
 //Expected FG
@@ -29,7 +32,7 @@ document.getElementById("answer").innerHTML = ExpFG;
 function ApparentAttenuation(){
 var first = Number(document.theForm.elements[0].value);
 var second = Number(document.theForm.elements[1].value);
-var AppAtt = 100*((first - second)/(first - 1));
+var AppAtt = Math.max(100*((first - second)/(first - 1))).toFixed(1);
 document.getElementById("answer").innerHTML = "The apparent attenuation of your yeast was <b>"+  AppAtt + "%</b>";
 }
 
@@ -41,6 +44,7 @@ var sum = first / second;
 document.getElementById("answer").innerHTML = sum;
 }
 
+//Working
 //Specific Gravity to Plato Converter
 function SpecToPlato(){
 var first = Number(document.theForm.elements[2].value);
@@ -53,8 +57,8 @@ document.getElementById("answer").innerHTML = "An original gravity of <b>" + Mat
 function ABV(){
 var first = Number(document.theForm.elements[0].value);
 var second = Number(document.theForm.elements[1].value);
-var ABV = 131.25 * (first - second);
-document.getElementById("answer").innerHTML = "The ABV of your beer is <b>"+  ABV + "%</b>";
+var ABV = Math.max(131.25 * (first - second)).toFixed(1);
+document.getElementById("answer").innerHTML = "The ABV of your beer is approximately <b>"+  ABV + "%</b>";
 }
 
 </script>
