--- a/Quarter Project.html
+++ b/Quarter Project.html
@@ -215,7 +215,7 @@ th, td {padding: 5px;}
 IT 102 - Quarter Project of Choice<br>
 North Seattle College - Winter Quarter<br>
 Brewing Calculator<br>
-John Paul Robert
+John Paul Roberts
 
 </body>
 </html>
